feat: Criando o formulário da página inicial

--- a/src/components/CountDown/styles.module.css
+++ b/src/components/CountDown/styles.module.css
@@ -1,7 +1,6 @@
 .container {
-  font-size: clamp(8rem, 25vw, 16rem);
-  font-weight: lighter;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: clamp(8rem, 30vw, 16rem);
+  font-weight: bold;
   text-align: center;
-  line-height: 1;
+  line-height: 1.3;
 }
