--- a/src/pages/History/styles.module.css
+++ b/src/pages/History/styles.module.css
@@ -35,3 +35,12 @@
   text-align: left;
   padding: 1.6rem;
 }
+
+.thSort {
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.tableThSort:hover {
+  filter: brightness(80%);
+}
